Fix: chat message alignment for recipient

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -264,6 +264,7 @@ $reddish: rgb(157, 65, 65);
 
                     .message-content{
                         @include centered-flex(column);
+                        align-items: flex-start;
                         max-width: 75%;
 
                         p{
